# Leeds-RayTracing

./: CMakeLists.txt  README.md
objects/: cornell_box.mtl  triangle_backplane.mtl
src/: RenderController.h  RenderParameters.h  RenderWindow.h  Renderparameters.cpp  main.cpp
src/ArcBall/: ArcBall.cpp  ArcBall.h  ArcBallWidget.h
src/Math/: Matrix4.cpp  Matrix4.h  Quaternion.cpp  Quaternion.h  Ray.cpp  Ray.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
src/OpenGL/: RenderWidget.cpp  RenderWidget.h
src/RayTrace/: RaytraceRenderWidget.cpp  RaytraceRenderWidget.h
src/Render/: Light.cpp  Light.h  Material.cpp  Material.h  Scene.cpp  Scene.h  ThreeDModel.cpp  ThreeDModel.h  Triangle.cpp  Triangle.h
